fix: removes parent spacing of first entry of next level

--- a/packages/elements/src/components/ino-markdown-editor/ino-markdown-editor.scss
+++ b/packages/elements/src/components/ino-markdown-editor/ino-markdown-editor.scss
@@ -203,12 +203,14 @@ ino-markdown-editor {
       list-style: none;
     }
 
-    :is(ul, ol)[data-type='taskList'] {
-      padding-left: 12px;
-
+    :is(ul, ol) {
       p {
         margin: 0;
       }
+    }
+
+    :is(ul, ol)[data-type='taskList'] {
+      padding-left: 12px;
 
       li {
         display: flex;
